实现内容树的展示

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,16 @@
 	<artifactId>aiyou-manager-web</artifactId>
 	<packaging>war</packaging>
 	<dependencies>
+		<dependency>
+			<groupId>com.huazai.b2c.aiyou</groupId>
+			<artifactId>aiyou-content-interface</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.huazai.b2c.aiyou</groupId>
+			<artifactId>aiyou-manager-interface</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 		<!-- Spring 相关 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -38,11 +48,6 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.huazai.b2c.aiyou</groupId>
-			<artifactId>aiyou-manager-interface</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<!-- JSP相关 -->
 		<dependency>
