--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
 			<artifactId>aiyou-content-interface</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<!-- 搜索服务管理后台服务接口 -->
+		<dependency>
+			<groupId>com.huazai.b2c.aiyou</groupId>
+			<artifactId>aiyou-search-interface</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 		<!-- 后台商品管理服务接口 -->
 		<dependency>
 			<groupId>com.huazai.b2c.aiyou</groupId>
