--- a/src/main/resources/resource/resource.properties
+++ b/src/main/resources/resource/resource.properties
@@ -1,1 +1,4 @@
-AIYOU_IMAGE_BASE_URL=http://192.168.182.128:8888/
+#001-Service
+#AIYOU_IMAGE_BASE_URL=http://192.168.182.128:8888/
+#002-Service
+AIYOU_IMAGE_BASE_URL=http://192.168.194.131:8888/
